<resources>
    <string name="app_name">DiscoMusicApp</string>
    <string name="discoMusic">Disco Music</string>
    <string name="songs">Songs</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="search">Search</string>
    <string name="store">Store</string>
    <string name="song1">Yes Sir, I Can Boogie</string>
    <string name="artist1">Baccara</string>
    <string name="song2">Love for the Sake of Love</string>
    <string name="artist2">Claudja Barry</string>
    <string name="song3">Daddy Cool</string>
    <string name="artist3">Boney M</string>
    <string name="song4">Faces</string>
    <string name="artist4">Clio</string>
    <string name="song5">Save Me</string>
    <string name="artist5">Clout</string>
    <string name="song6">Burning Love</string>
    <string name="artist6">DD Sound</string>
    <string name="song7">I Should Be Dancing</string>
    <string name="artist7">The Emotions</string>
    <string name="song8">Looking For You</string>
    <string name="artist8">Nino Ferrer</string>
    <string name="song9">Move On Up</string>
    <string name="artist9">Curtis Mayfield</string>
    <string name="song10">Take A Chance</string>
    <string name="artist10">Mr. Flagio</string>
    <string name="song11">Hypnotic Tango</string>
    <string name="artist11">My Mine</string>
    <string name="song12">Amama</string>
    <string name="artist12">Pink Project</string>
    <string name="song13">Happy Is The Only Way</string>
    <string name="artist13">Sine</string>
    <string name="song14">This Town Ain\'t Big Enough For Both Of Us</string>
    <string name="artist14">Sparks</string>
    <string name="song15">Sleeping Giant</string>
    <string name="artist15">Thor</string>
    <string name="previous">Previous Track</string>
    <string name="play">Play</string>
    <string name="next">Next Track</string>
</resources>
