<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.discomusicapp.NowPlayingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/song_title_action"
        android:layout_marginTop="@dimen/song_title_margin_top"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="@string/song1"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artist_name_action"
        android:textAlignment="center"
        tools:text="@string/artist1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/previous"
            android:contentDescription="@string/previous"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/playbutton"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/skiptrack"
            android:layout_weight="1"
            android:contentDescription="@string/next"/>

    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/lightOrange_background"/>

</LinearLayout>