<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightOrange_background"
    android:orientation="vertical"
    tools:context="com.example.android.discomusicapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/records"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/songs"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/category_albums"
            android:text="@string/songs"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/nowPlaying"
            style="@style/CategoryStyle"
            android:background="@color/category_nowPlaying"
            android:layout_height="wrap_content"
            android:text="@string/nowPlaying"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search"
            style="@style/CategoryStyle"
            android:background="@color/category_search"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/store"
            style="@style/CategoryStyle"
            android:background="@color/category_store"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/store"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>